# miniCalo

./: .gitmodules  CMakeLists.txt  exampleB4a.cc  run1.mac  run2.mac  vis.mac
include/: B4DetectorConstruction.hh  B4DetectorConstructionFP.hh  B4PrimaryGeneratorAction.hh  B4RunAction.hh  B4aActionInitialization.hh  B4aEventAction.hh  B4aSteppingAction.hh  SensorContainer.h  sensorContainer.h
old_src/: B4DetectorConstructionFP.cc  B4JetGeneratorAction.cc  B4PrimaryGeneratorAction.cc  json_reading_test.cc
src/: B4DetectorConstruction.cc  B4RunAction.cc  B4aActionInitialization.cc  B4aEventAction.cc  B4aSteppingAction.cc  Calorimeter.cc  Calorimeter.hh  PrimariesGenerator.cc  PrimariesGenerator.hh  SensorContainer.cc  generate_pu.cc  json_reading_test.cc  minicalo_library.cc  visualize.cc
test/: test_cases_library.cc
